# python_package

./: .buildinfo  LICENSE.txt  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  textwiz.html  tox.ini
.doctrees/: environment.pickle  index.doctree  modules.doctree  textwiz.doctree
.doctrees/notebooks/: usage_example.doctree
.github/workflows/: docs.yml  tests.yml
TextWiz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
_modules/: index.html
_modules/textwiz/: mining.html  preprocessing.html  visuals.html
_sources/: index.rst
docs/source/: conf.py
doctrees/: environment.pickle
doctrees/notebooks/: usage_example.doctree
examples/: usage_example.ipynb
html/: .buildinfo  modules.html  py-modindex.html  search.html  searchindex.js  textwiz.html
html/_modules/textwiz/: visuals.html
html/_sources/: modules.rst  textwiz.rst
html/_sources/notebooks/: usage_example.ipynb
jupyter_execute/notebooks/: usage_example.ipynb
notebooks/: usage_example.html
tests/: test_mining.py  test_preprocessing.py
textwiz/: preprocessing.py  visuals.py
textwiz_package/: mining.py  preprocessing.py  visuals.py
