# setup.cfg

[metadata]
name = TextWiz
description = textwiz package
url = https://github.com/mfarmalkhan/python_package
author = Muhammad Farmal Khan
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11.7
    Programming Language :: Python :: 3.12.0

[options]
python_requires = >=3.6
packages = textwiz
install_requires =
    matplotlib>=3.5.1
    nltk>=3.8.1
    numpy>=1.21.0
    wordcloud==1.8.0


[options.extras_require]
testing =
    tox >= 3.24
    pytest >= 6.0
    pytest-cov >= 2.10.0

docs =
    sphinx >= 5.1.0
    sphinx-book-theme>=0.2.0
    numpydoc >= 1.2.1
    myst_nb >= 0.13.1
    sphinx_design >= 0.4.1